@@ -395,7 +395,8 @@ Wed May 16 20:30:02 BST 2007
 ----
 Thu May 17 12:44:56 BST 2007
 
-	use gtk_widget_get_name(widget) to find out about what type a widget is
+	use gtk_widget_get_name(widget) to find out about what type a
+	widget is
 
 ------
 
